--- a/new-portfolio/src/components/projects/Projects.css
+++ b/new-portfolio/src/components/projects/Projects.css
@@ -26,14 +26,14 @@
     width: 100%;
     height: 400px;
     display: grid;
-    grid-template-columns:1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
 
 }
 .project_link1, .project_link2, .project_link3,.project_link4{
-    background-color: white;
+    background-color: #e1cef1;
     margin-left: 50px;
     margin-right: 50px;
     border-radius: 30px;
