--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -48,7 +48,7 @@
 
   .skills_button_container{
         width:30%;
-        background-color: white;
+        background-color: #e1cef1;
         display: flex;
         flex-direction: row;
         justify-content: center;
