--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -18,7 +18,7 @@
 }
 .question{
     width: 100%;
-    color: #e1cef1;
+    color: white;
     font-weight: bolder;
     font-size: large;
     cursor: pointer;
@@ -27,7 +27,7 @@
     width: 100%;
     height: 100%;
     background-color: #7E3ABA;
-    color: #e1cef1;
+    color: white;
     border-radius: 20px;
     font-size: 25px;
     font-weight: bolder;
