--- a/new-portfolio/src/components/projects/Projects.css
+++ b/new-portfolio/src/components/projects/Projects.css
@@ -9,7 +9,7 @@
     height: 70px;
     background-color:#7E3ABA;
     border-radius: 20px;
-    color: #e1cef1;
+    color: white;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -20,11 +20,12 @@
 .projects:hover{
     width: 30%;
     height: 80px;
+    color: #e1cef1;
 }
 
 .name_projects_section{
     width: 100%;
-    height: 400px;
+    height: 500px;
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -32,22 +33,27 @@
     align-items: center;
 
 }
-.project_link1, .project_link2, .project_link3,.project_link4{
+.project_link{
     background-color: #e1cef1;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
     border-radius: 30px;
-    height: 100px;
+    height: 80%;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items:center;
     justify-content: center;
-    
 }
 .link_project{
     color:#7E3ABA;
     text-decoration: none;
-    font-size: 35px;
+    font-size: 30px;
+    margin: 0;
     font-weight: bolder;
     font-style: oblique;
+}
+.headerIconProject{
+    width: 30px;
+    margin:10px;
+    cursor:pointer;
 }
