--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -15,7 +15,7 @@
     border-radius: 150px;
     margin-top: 50px;
     cursor:pointer;
-    border: 4px solid white;
+    border: 7px solid #7E3ABA;
 
 }
 .headerIcon_container{
