--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -69,3 +69,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+.question_picture{
+    width:200px;
+    height: 200px;
+    border-radius: 150px;
+    margin-top: 50px;
+    cursor:pointer;
+    border: 4px;
+}
