--- a/new-portfolio/src/App.css
+++ b/new-portfolio/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
   /* background-color: #e1cef1; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
