--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,29 +1,19 @@
 .contact__container{
-    width: 100%;
-    height: 400px;
+    background-color: #e1cef1;
+    width:50%;
+    height: 120px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.contact_section{
-    background-color: #975acd;
-    width: 50%;
-    height: 80px;
-    display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    border-radius: 30px;
-}
-.logo_contact_section{
-    position: relative;
-    top:107px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    border-radius: 100px;
 }
 .email_contact_section, .phone_contact_section{
     width: 100%;
-    color:white;
+    color:#7E3ABA;
     font-weight: bolder;
-    font-size: large;
+    font-size: 25px;
     cursor: pointer;
 }
