--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,11 +1,19 @@
 .contact__container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.contact_items{
     background-color: #e1cef1;
+    width: 35%;
     height: 80px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 150px;
     margin-bottom: 30px;
     border-radius: 100px;
 }
@@ -13,6 +21,6 @@
     width: 100%;
     color:#7E3ABA;
     font-weight: bolder;
-    font-size: 25px;
+    font-size: 20px;
     cursor: pointer;
 }
