--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -9,7 +9,7 @@
     width: 100px;
     height: 100px;
     border-radius: 150px;
-    background-color: #7E3ABA;
+    background-color: #975acd;
     display: flex;
     justify-content: center;
     align-items: center;
