--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -1,18 +1,56 @@
 .Mailform__container{
-    height: 300px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    height: 400px;
     width: 100%;
-
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 .form__container{
-    background-color: yellow;
-    width: 50%;
-    height: 200px;
+    background-color: #e1cef1;
+    width: 40%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 30px;
+    border: 8px solid #7E3ABA;
+}
+
+.form_title{
+    color: #7E3ABA;
+    font-size: 30px;
+}
+
+.form_input{
+    margin: 10px;
+    border-radius: 30px;
+    height:40px;
+    width: 40%;
+}
+.form_textarea{
+    margin: 10px;
+    border-radius: 10px;
+    width: 100%;
+    height: 35%;
+}
+::-webkit-input-placeholder{
+    text-align: center;
+    font-size: 15px;
+    font-style: oblique;
+    color: #7E3ABA;
+}
+
+.button_submit{
+    background-color: #7E3ABA;
+    width: 80px;
+    height: 40px;
+    margin: 20px;
+    border-radius: 20px;
+    border: 2px solid black;
+    cursor: pointer;
+    color: white;
 }
