--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -17,7 +17,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px;
-    border: 8px solid #7E3ABA;
+    border: 4px solid #7E3ABA;
+    border-radius: 30px;
 }
 
 .form_title{
