skills modal added

--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -82,6 +82,23 @@
 }
 @keyframes skillsItem {
     0%{
+        left:0px;
+        top:0px
+    }
+    25%{
+        left:100px
+        }
+        50%{
+            left:150px
+        }
+        75%{
+            left:250px;
+        }
+        100%{
+            left:0px;
+        }
+
+    /* 0%{
     right:0px;
     top:0px;
     }
@@ -96,5 +113,5 @@
     }
     100%{
         right:0px;
-    }
+    } */
   }
