--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -1,11 +1,4 @@
-.questions__section__container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.question_container{
+.questions_container_row{
     width:50%;
     height: 100px;
     background-color: #975acd;
@@ -17,20 +10,21 @@
     padding: 10px;
 }
 
+
 .question{
     width: 100%;
     color: white;
     font-weight: bolder;
-    font-size: large;
+    font-size: 1vw;
     cursor: pointer;
 }
 .question_clicked{
     width: 100%;
-    height: 100%;
+    height: 30%;
     background-color: #7E3ABA;
     color: white;
     border-radius: 20px;
-    font-size: 25px;
+    font-size: 1vw;
     font-weight: bolder;
     display: flex;
     justify-content: center;
@@ -39,11 +33,11 @@
 }
 .question:hover{
     width: 100%;
-    height: 100%;
+    height: 100px;
     background-color: #7E3ABA;
-    color: #e1cef1;
+    color: white;
     border-radius: 20px;
-    font-size: 25px;
+    font-size: 2vw;
     font-weight: bolder;
     display: flex;
     justify-content: center;
@@ -52,8 +46,16 @@
 
 /*crear sidebar para question_container*/
 
-.questions_section_sidebar{
-    background-color: yellow;
+.questions_container_sidebar{
+    width:10%;
+    height:300px;
+    background-color: #975acd;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    padding: 10px;
+    margin-left: 20px;
+
 }
