--- a/new-portfolio/src/components/projects/Projects.css
+++ b/new-portfolio/src/components/projects/Projects.css
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     font-weight: bolder;
-    font-size: 35px;
+    font-size: 2vw;
 }
 .projects:hover{
     width: 100%;
