project section added in question bar

--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -5,9 +5,13 @@
     align-items: center;
     justify-content: space-between;
 }
+.question_sidebar_section{
+    width:30%;
+    background-color: yellow;
+}
 
 .myHistory__container{
-    background-color: white;
+    background-color: green;
     width: 90%;
     height: 700px;
     display: grid;
