--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -5,30 +5,26 @@
     align-items: center;
     justify-content: space-between;
 }
-.question_sidebar_section{
-    width:30%;
-    background-color: yellow;
-}
 
 .myHistory__container{
-    background-color: green;
-    width: 90%;
+    width: 78%;
     height: 700px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
+
 }
-.pastHistory_section{
+.history_section{
     background-color: yellow;
-    width: 80%;
+    width: 100%;
     height: 200px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
 }
-.pastHistory_section_question{
+.pastHistory_section{
     background-color: white;
     width: 100%;
     height: 200px;
@@ -37,16 +33,6 @@
     justify-content: space-between;
 }
 
-.presentHistory_section{
-    background-color: yellow;
-    width: 80%;
-    height: 200px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    align-items: center;
-    margin-left: 110px;
-}
 .presentHistory_section_question{
     background-color: white;
     width: 100%;
@@ -55,16 +41,7 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.futureHistory_section{
-    background-color: yellow;
-    width: 80%;
-    height: 200px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    align-items: center;
-    margin-left: 230px;
-}
+
 .futureHistory_section_question{
     background-color: white;
     width: 100%;
@@ -74,10 +51,11 @@
     justify-content: space-between;
 }
 .question_picture{
-    width:200px;
-    height: 200px;
+    width:150px;
+    height: 150px;
     border-radius: 150px;
     margin-top: 50px;
     cursor:pointer;
     border: 4px;
+    margin: auto;
 }
