--- a/new-portfolio/src/pages/LandingPage.css
+++ b/new-portfolio/src/pages/LandingPage.css
@@ -1,7 +1,8 @@
 .landingPage__container{
     width: 100%;
+    height: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
