--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -6,23 +6,56 @@
     justify-content: space-between;
 }
 
-.myHistory__container{
+ .myHistory__container{
     width: 78%;
     height: 700px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
-
 }
+
 .history_section{
     width: 100%;
     height: 200px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
     justify-content: center;
     align-items: center;
 }
+
+.picture_history_section{
+
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+.question_picture{
+    width:200px;
+    height: 200px;
+    border-radius: 150px;
+    margin-top: 50px;
+    cursor:pointer;
+    border: 4px;
+    margin: auto;
+} 
+.question_picture_two{
+    width:200px;
+    height: 200px;
+}
+
+.question_title_history{
+
+    text-align:start;
+    font-weight: bold;
+}
+.question_text_history{
+    text-align:justify;
+}
+/*
+
 .pastHistory_section{
     background-color: white;
     width: 100%;
@@ -32,13 +65,12 @@
     justify-content: space-between;
 }
 
-.presentHistory_section_question{
-    background-color: white;
+.presentHistory_section{
     width: 100%;
     height: 200px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .futureHistory_section_question{
@@ -56,4 +88,4 @@
     cursor:pointer;
     border: 4px;
     margin: auto;
-}
+} */
