--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,9 +1,11 @@
 .contact__container{
     width: 100%;
+    height: 150px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 150PX;
 }
 .contact_items{
     background-color: #e1cef1;
@@ -13,8 +15,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 150px;
-    margin-bottom: 30px;
+    /* margin-top: 150px; */
+    /* margin-bottom: 30px; */
     border-radius: 100px;
 }
 .email_contact_section, .phone_contact_section{
