--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -1,9 +1,10 @@
 .header__container{
     width: 100%;
-    height: 400px;
+    height: 270px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 150px;
 }
 .header_logo_container{
     margin-left:10px;
