--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
+
 .header__container{
     width: 100%;
-    height: 270px;
+    height: 400px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 150px;
+    background: -webkit-linear-gradient(90deg,#af80da 10%, #7E3ABA  70%);
+    /* background: -webkit-linear-gradient(90deg, #c8a7e6 10%,  #af80da 50% ); */
+
 }
 .header_logo_container{
     margin-left:10px;
@@ -27,4 +33,19 @@
     width: 30px;
     margin:10px;
     cursor:pointer;
+}
+.name_title{
+    font-weight: bolder;
+    font-size: 1.5vw;
+    font-family: 'Architects Daughter', cursive;
+    color: white;
+    /* color: #7E3ABA; */
+}
+.position_title{
+    font-weight: bolder;
+    font-size: 1.3vw;
+    font-family: 'Architects Daughter', cursive;
+    color: white;
+    /* color: #975acd; */
+    text-transform: uppercase;
 }
