--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -25,7 +25,6 @@
 }
 
 .picture_history_section{
-
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -41,13 +40,22 @@
     border: 4px;
     margin: auto;
 } 
-
+.text_history_section{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+}
 
 .question_title_history{
-
     text-align:start;
-    font-weight: bold;
+    font-weight: bolder;
+    font-size: 2vw;
+    color:white
 }
 .question_text_history{
     text-align:justify;
+    font-size: 1.3vw;
+    color:white;
+    font-style: oblique;
+    font-weight: bolder;
 }
