--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -1,8 +1,22 @@
 .ProjectsPage__container{
-    height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.projectsPage_section{
+    width: 78%;
+    height: 700px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.eachProject_section{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 10px;
 }
