--- a/new-portfolio/src/pages/WhyPage.css
+++ b/new-portfolio/src/pages/WhyPage.css
@@ -5,3 +5,11 @@
     justify-content: space-between;
     align-items: center;    
 }
+.whyPage_section{
+    width: 78%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
