--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -15,15 +15,13 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    /* margin-top: 150px; */
-    /* margin-bottom: 30px; */
     border-radius: 100px;
 }
 .email_contact_section, .phone_contact_section{
     width: 100%;
     color:#7E3ABA;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 1.5vw;
     cursor: pointer;
     text-decoration: none;
 }
