--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
-
 .header__container{
     width: 100%;
     height: 400px;
@@ -8,17 +7,16 @@
     flex-direction: row;
     justify-content: space-between;
     background: -webkit-linear-gradient(90deg,#af80da 10%, #7E3ABA  70%);
-    /* background: -webkit-linear-gradient(90deg, #c8a7e6 10%,  #af80da 50% ); */
-
 }
 .header_logo_container{
     margin-left:10px;
     margin-top: 10px;
 }
 .profilePicture{
-    width:200px;
-    height: 200px;
-    border-radius: 150px;
+    width: 35%;
+    /* width:200px;
+    height: 200px; */
+    border-radius: 80px;
     margin-top: 50px;
     cursor:pointer;
     border: 3px solid #7E3ABA;
@@ -38,13 +36,11 @@
     font-size: 1.5vw;
     font-family: 'Architects Daughter', cursive;
     color: white;
-    /* color: #7E3ABA; */
 }
 .position_title{
     font-weight: bolder;
     font-size: 1.3vw;
     font-family: 'Architects Daughter', cursive;
     color: white;
-    /* color: #975acd; */
     text-transform: uppercase;
 }
