--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,11 +1,13 @@
 .contact__container{
+/* background-color: yellow; */
     width: 100%;
-    height: 150px;
+    height: 350px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top: 150PX;
+    background: -webkit-linear-gradient(90deg, #7E3ABA  10%, #af80da 70%);
 }
 .contact_items{
     background-color: #e1cef1;
