--- a/new-portfolio/src/App.css
+++ b/new-portfolio/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
+
+
 .App {
   text-align: center;
   background-color:#af80da ;
+  font-family: 'Architects Daughter', cursive;
 }
 
