--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,9 +1,9 @@
 .contact__container{
 /* background-color: yellow; */
     width: 100%;
-    height: 350px;
+    height: 250px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 150PX;
