--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
 
 .header__container{
     width: 100%;
@@ -12,14 +13,19 @@
     margin-left:10px;
     margin-top: 10px;
 }
+.profile_section{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .profilePicture{
     width: 35%;
-    /* width:200px;
-    height: 200px; */
     border-radius: 80px;
     margin-top: 50px;
     cursor:pointer;
-    border: 3px solid #7E3ABA;
+    border: 5px solid #7E3ABA;
 
 }
 .headerIcon_container{
@@ -33,13 +39,15 @@
 }
 .name_title{
     font-weight: bolder;
-    font-size: 1.5vw;
-    font-family: 'Architects Daughter', cursive;
+    font-size: 3vw;
+    font-family: 'Bonheur Royale', cursive;
+cursor: pointer;
+
     color: white;
 }
 .position_title{
     font-weight: bolder;
-    font-size: 1.3vw;
+    font-size: 2vw;
     font-family: 'Architects Daughter', cursive;
     color: white;
     text-transform: uppercase;
