--- a/new-portfolio/src/pages/LandingPage.css
+++ b/new-portfolio/src/pages/LandingPage.css
@@ -1,8 +1,8 @@
 .landingPage__container{
     width: 100%;
-    height: 500px;
+    height: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
 }
