box shadow modified

--- a/new-portfolio/src/components/projects/ProjectsButton.css
+++ b/new-portfolio/src/components/projects/ProjectsButton.css
@@ -18,6 +18,7 @@ margin-top:100px;
     align-items: center;
     font-weight: bolder;
     font-size: 2vw;
+    box-shadow: 10px 20px 30px #7E3ABA;
 }
 .projects:hover{
     width: 20%;
