--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -16,7 +16,7 @@
 .eachProject_section{
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 15px;
 }
