--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -18,6 +18,7 @@
     justify-content: space-around;
     align-items: center;
     border-radius: 100px;
+    box-shadow: 4px 5px 20px #7E3ABA;
 }
 .email_contact_section, .phone_contact_section{
     width: 100%;
