--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -13,6 +13,7 @@
     border-radius: 20px;
     padding: 10px;
     margin-top: 30px;
+    box-shadow: 10px 20px 30px #7E3ABA;
 }
 
 
@@ -62,5 +63,5 @@
     border-radius: 20px;
     padding: 10px;
     margin-left: 20px;
-
+    box-shadow: 10px 20px 30px #7E3ABA;
 }
