--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -9,8 +9,7 @@
 .myHistory__container{
     width: 78%;
     height: 700px;
-    display: grid;
-    grid-template-rows: 1fr;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -19,7 +18,7 @@
     width: 100%;
     height: 200px;
     display: grid;
-    grid-template-columns: 1fr 1fr ;
+    grid-template-columns: 1fr 1fr;
     justify-content: center;
     align-items: center;
 }
@@ -27,15 +26,14 @@
 .picture_history_section{
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction:column;
     justify-content: center;
 
 }
 .question_picture{
-    width:200px;
+    width:50%;
     height: 200px;
-    border-radius: 150px;
-    margin-top: 50px;
+    border-radius: 50px;
     cursor:pointer;
     border: 4px;
     margin: auto;
@@ -50,7 +48,8 @@
     text-align:start;
     font-weight: bolder;
     font-size: 2vw;
-    color:white
+    color:white;
+    text-shadow: 1px 1px 2px black;
 }
 .question_text_history{
     text-align:justify;
