--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -46,14 +46,15 @@
   }
 
   .skills_button_container{
-        width:30%;
+        width:35%;
         background-color: #e1cef1;
+        opacity: 0.4;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center; 
         margin-right: 100px;
-        border-radius: 20px;
+        border-radius: 90px;
         position: relative;
         animation: skillsItem 8s ease 2s infinite alternate backwards running;
 }
