--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -1,29 +1,26 @@
+
 .Mailform__container{
-    margin-top: 50px;
-    margin-bottom: 100px;
-    height: 400px;
-    width: 100%;
+    width:100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color: yellow;
 }
 .form__container{
-    background-color: #e1cef1;
-    width: 40%;
-    height: 100%;
+    background-color:white;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
-    border: 4px solid #7E3ABA;
-    border-radius: 30px;
+
 }
 
 .form_title{
     color: #7E3ABA;
-    font-size: 30px;
+    font-size: 2.5vw;
 }
 
 .form_input{
@@ -35,23 +32,23 @@
 .form_textarea{
     margin: 10px;
     border-radius: 10px;
-    width: 100%;
-    height: 35%;
+    width:80%;
+    height: 40px;
 }
 ::-webkit-input-placeholder{
     text-align: center;
-    font-size: 15px;
+    font-size: 1.2vw;
     font-style: oblique;
     color: #7E3ABA;
 }
 
 .button_submit{
     background-color: #7E3ABA;
-    width: 80px;
+    width: 30%;
     height: 40px;
     margin: 20px;
     border-radius: 20px;
-    border: 2px solid black;
     cursor: pointer;
     color: white;
+    box-shadow: 10px 7px 7px #7E3ABA;
 }
