palette colour changed

--- a/new-portfolio/src/App.css
+++ b/new-portfolio/src/App.css
@@ -4,7 +4,8 @@
 
 .App {
   text-align: center;
-  background-color:#af80da ;
+  background-color:#476072 ;
   font-family: 'Architects Daughter', cursive;
+  /* background-color: #916BBF; */
 }
 
