--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,16 +1,14 @@
 .contact__container{
-/* background-color: yellow; */
     width: 100%;
     height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 150PX;
-    background: -webkit-linear-gradient(90deg, #7E3ABA  10%, #af80da 70%);
+    margin-top: 150px;
 }
 .contact_items{
-    background-color: #e1cef1;
+    background-color: #334257;
     width: 35%;
     height: 80px;
     display: flex;
@@ -18,13 +16,29 @@
     justify-content: space-around;
     align-items: center;
     border-radius: 100px;
-    box-shadow: 4px 5px 20px #7E3ABA;
 }
 .email_contact_section, .phone_contact_section{
     width: 100%;
-    color:#7E3ABA;
+    color:#EEEEEE;
     font-weight: bolder;
-    font-size: 1.5vw;
+    font-size: 2vw;
     cursor: pointer;
     text-decoration: none;
+}
+.phone_text{
+    text-decoration: none;
+    color:#EEEEEE;
+}
+.email_contact_section:hover, .phone_contact_section:hover{
+    background-color: #334257;
+    width: 100%;
+    height: 100px;
+    color: #EEEEEE;
+    display: flex;
+    font-size: 20px;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 100px;
+    box-shadow: 10px 20px 30px #548CA8;
 }
