--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -7,7 +7,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: -webkit-linear-gradient(90deg,#af80da 10%, #7E3ABA  70%);
+    background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+   
+
 }
 .header_logo_container{
     margin-left:10px;
@@ -25,7 +27,7 @@
     border-radius: 80px;
     margin-top: 50px;
     cursor:pointer;
-    border: 5px solid #7E3ABA;
+    border: 5px solid #548CA8;
 
 }
 .headerIcon_container{
