--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -5,7 +5,7 @@
 .questions_container_row{
     width:50%;
     height: 100px;
-    background-color: #975acd;
+    background-color: #334257;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -13,13 +13,13 @@
     border-radius: 20px;
     padding: 10px;
     margin-top: 30px;
-    box-shadow: 10px 20px 30px #7E3ABA;
+
 }
 
 
 .question{
     width: 100%;
-    color: white;
+    color: #EEEEEE;
     font-weight: bolder;
     font-size: 1.3vw;
     cursor: pointer;
@@ -28,7 +28,7 @@
     width: 100%;
     height: 30%;
     background-color: #7E3ABA;
-    color: white;
+    color: #EEEEEE;
     border-radius: 20px;
     font-size: 1vw;
     font-weight: bolder;
@@ -40,14 +40,15 @@
 .question:hover{
     width: 100%;
     height: 100px;
-    background-color: #7E3ABA;
-    color: white;
+    background-color: #334257;
+    color: #EEEEEE;
     border-radius: 20px;
     font-size: 1.5vw;
     font-weight: bolder;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 10px 20px 30px #548CA8;
 }
 
 /*crear sidebar para question_container*/
@@ -55,7 +56,7 @@
 .questions_container_sidebar{
     width:10%;
     height:500px;
-    background-color: #975acd;
+    background-color: #334257;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -63,5 +64,4 @@
     border-radius: 20px;
     padding: 10px;
     margin-left: 20px;
-    box-shadow: 10px 20px 30px #7E3ABA;
 }
