--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -9,7 +9,8 @@
     width: 100px;
     height: 100px;
     border-radius: 150px;
-    background: -webkit-linear-gradient(90deg, #7E3ABA  10%, #af80da 50%);
+    /* background-color: #548CA8; */
+    background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%);
     display: flex;
     justify-content: center;
     align-items: center;
