--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -45,7 +45,7 @@
     color: #EEEEEE;
     border-radius: 20px;
     font-size: 1.5vw;
-    font-family: 'Bonheur Royale', cursive;
+    /* font-family: 'Bonheur Royale', cursive; */
     font-weight: bolder;
     display: flex;
     justify-content: center;
