--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -17,6 +17,6 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr 1fr;
     gap: 15px;
+    justify-items: center;
 }
