--- a/new-portfolio/src/components/projects/EachProject.css
+++ b/new-portfolio/src/components/projects/EachProject.css
@@ -2,7 +2,7 @@
     width: 80%;
     background-color:#548CA8 ;
     border-radius: 50px;
-    height: 100%;
+
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -12,13 +12,13 @@
 .link_project{
     color:#EEEEEE;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 1.5vw;
     font-weight: bolder;
     font-style: oblique;
     margin: 0;
 }
 .headerIconProject{
-    width: 30px;
+    width:7%;
     margin:10px;
     cursor:pointer;
 }
