--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -29,23 +29,13 @@
     border: 5px solid #548CA8;
 
 }
-.headerIcon_container{
-    /* display: flex;
-    flex-direction: row;
-    justify-content: flex-end; */
 
-}
-.iconHeader{
-    width:4%;
-    margin:20px;
-    cursor:pointer;
-}
 .name_title{
     font-weight: bolder;
     font-size: 3vw;
     font-family: 'Bonheur Royale', cursive;
-cursor: pointer;
-text-shadow: 1px 1px 2px black;
+    cursor: pointer;
+    text-shadow: 1px 1px 2px black;
     color: white;
 }
 .position_title{
@@ -55,4 +45,20 @@ text-shadow: 1px 1px 2px black;
     color: white;
     text-transform: uppercase;
     text-shadow: 1px 1px 2px black;
+}
+
+.headerIcon_container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
+}
+.iconSection{
+    width: 50%;
+}
+.iconHeader{
+    width:8%;
+    margin:20px;
+    cursor:pointer;
 }
