--- a/new-portfolio/src/components/logo/Logo.css
+++ b/new-portfolio/src/components/logo/Logo.css
@@ -13,3 +13,18 @@
     border-radius: 150px;
     border: 2px solid white;
 }
+
+@media screen 
+  and (max-width: 360px) 
+  and (max-height: 640px) 
+ {
+
+    .logo_header{
+        max-width: 20px;
+        max-height:20px;
+        cursor: pointer;
+        border-radius: 150px;
+        border: 2px solid white;
+    }
+
+}
