--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -22,6 +22,28 @@
     cursor: pointer;
 
 }
+@media screen 
+  and (max-width: 360px) 
+  and (max-height: 640px) 
+ {
+    .skills_header{
+        width: 30px;
+        height: 30px;
+        border-radius: 150px;
+        /* background-color: #548CA8; */
+        background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        animation: skillsHeader 20s linear 2s infinite alternate backwards running;
+        color:white;
+        font-weight: bolder;
+        font-size: 1.7vw;
+        cursor: pointer;
+    
+    }
+}
 
 @keyframes skillsHeader {
     0%{
