--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -5,32 +5,16 @@
     margin-top: 100px;
 
 }
-.skills_header{
-    width: 100px;
-    height: 100px;
-    border-radius: 150px;
-    /* background-color: #548CA8; */
-    background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    animation: skillsHeader 20s linear 2s infinite alternate backwards running;
-    color:white;
-    font-weight: bolder;
-    font-size: 1.7vw;
-    cursor: pointer;
+/* webApp size */ /* Ipad Size  */
 
-}
 @media screen 
-  and (max-width: 360px) 
-  and (max-height: 640px) 
- {
-    .skills_header{
-        width: 30px;
-        height: 30px;
+  and (min-width: 321px) 
+
+  {
+    .skills_header_button{
+        width: 100px;
+        height: 100px;
         border-radius: 150px;
-        /* background-color: #548CA8; */
         background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%);
         display: flex;
         justify-content: center;
@@ -41,34 +25,33 @@
         font-weight: bolder;
         font-size: 1.7vw;
         cursor: pointer;
-    
     }
-}
 
-@keyframes skillsHeader {
-    0%{
-    right:0px;
-    top:0px;
-    }
-    25%{
-    top:300px;
-    right:0px
-    }
-    50%{
+    @keyframes skillsHeader {
+        0%{
+        right:0px;
         top:0px;
-        right:0px
-    }
-    75%{
+        }
+        25%{
         top:300px;
-        right:0px;
-    }
-    100%{
-        right:0px;
-        top:0px;
-    }
-  }
+        right:0px
+        }
+        50%{
+            top:0px;
+            right:0px
+        }
+        75%{
+            top:300px;
+            right:0px;
+        }
+        100%{
+            right:0px;
+            top:0px;
+        }
 
-  .skills_button_container{
+    }
+
+    .skillsList_container{
         width:35%;
         background-color: #EEEEEE;
         opacity: 0.2;
@@ -121,3 +104,61 @@
             left:0px;
         }
   }
+}
+
+
+
+/* --------------------------- */
+/* phone size */
+@media screen 
+  and (max-width: 320px) 
+ {
+    .skills_header_button{
+        width: 30px;
+        height: 30px;
+        border-radius: 150px;
+        background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        color:white;
+        font-weight: bolder;
+        font-size: 1.7vw;
+        cursor: pointer;
+    }
+    .skillsList_container{
+        width:90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center; 
+        margin-right: 100px;
+        border-radius: 90px;
+}
+.first_list_skills, .second_list_skills, .third_list_skills{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    font-weight: 100px;
+    font-size: 1.7vw;
+
+    position: relative;
+    }
+.list_skill{
+    margin: 10px;
+    color: #EEEEEE;
+    list-style-type: none;
+    font-size: 1.7vw;
+    font-weight: bolder;
+    font-style: oblique;
+    cursor: pointer;
+}
+
+}
+
+/* --------------------------- */
+
