--- a/new-portfolio/src/components/logo/Logo.css
+++ b/new-portfolio/src/components/logo/Logo.css
@@ -1,30 +1,45 @@
-
-.logo_header{
-    width: 60px;
-    height:60px;
-    cursor: pointer;
-    border-radius: 150px;
-    border: 2px solid white;
-}
-.logo_footer{
-    width: 60px;
-    height:60px;
-    cursor: pointer;
-    border-radius: 150px;
-    border: 2px solid white;
-}
-
 @media screen 
-  and (max-width: 360px) 
-  and (max-height: 640px) 
- {
-
+  and (min-width: 321px) {
     .logo_header{
-        max-width: 20px;
-        max-height:20px;
+        width: 80px;
+        height:80px;
         cursor: pointer;
         border-radius: 150px;
         border: 2px solid white;
     }
+    .logo_footer{
+        width: 80px;
+        height:80px;
+        cursor: pointer;
+        border-radius: 150px;
+        border: 2px solid white;
+    }
+  }
+
+
+/* phone' size */
+
+@media screen 
+  and (max-width: 320px) 
+ {
+
+    .logo_header{
+        max-width: 30px;
+        max-height:30px;
+        cursor: pointer;
+        border-radius: 150px;
+        border: 2px solid white;
+    }
+
+    .logo_footer{
+        width: 30px;
+        height:30px;
+        cursor: pointer;
+        border-radius: 150px;
+        border: 2px solid white;
+    }
+    
+
+    
 
 }
