--- a/new-portfolio/src/components/projects/ProjectsButton.css
+++ b/new-portfolio/src/components/projects/ProjectsButton.css
@@ -6,25 +6,47 @@
     align-items: center;
 margin-top:100px;
 }
-.projects{
-    width: 15%;
-    height: 80px;
-    background-color:#334257;
-    border-radius: 20px;
-    color: #EEEEEE;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bolder;
-    font-size: 2vw;
-    /* box-shadow: 5px 10px 20px #548CA8; */
-}
-.projects:hover{
-    width: 20%;
-    height: 80px;
-    background-color: #334257;
-    color: #EEEEEE;
-    font-size: 45px;
-    box-shadow: 5px 10px 20px #548CA8;
-}
+
+@media screen 
+  and (min-width: 321px){
+    .projects{
+        width: 15%;
+        height: 80px;
+        background-color:#334257;
+        border-radius: 20px;
+        color: #EEEEEE;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bolder;
+        font-size: 2vw;
+        /* box-shadow: 5px 10px 20px #548CA8; */
+    }
+    .projects:hover{
+        width: 20%;
+        height: 80px;
+        background-color: #334257;
+        color: #EEEEEE;
+        font-size: 45px;
+        box-shadow: 5px 10px 20px #548CA8;
+    }
+  }
+
+  @media screen 
+  and (max-width: 320px){
+    .projects{
+        width: 45%;
+        height: 80px;
+        background-color:#334257;
+        border-radius: 20px;
+        color: #EEEEEE;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bolder;
+        font-size: 4vw;
+    }
+
+  }
