--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -2,42 +2,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
 
 
-
-.questions_container_row{
-    width:50%;
-    height: 100px;
-    background-color: #334257;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 20px;
-    padding: 10px;
-    margin-top: 30px;
-
-}
-
-
-.question{
-    width: 100%;
-    color: #EEEEEE;
-    font-weight: bolder;
-    font-size: 1.3vw;
-    cursor: pointer;
-}
-.question_clicked{
-    width: 100%;
-    height: 30%;
-    background-color: #7E3ABA;
-    color: #EEEEEE;
-    border-radius: 20px;
-    font-size: 1vw;
-    font-weight: bolder;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
+/* tablet and desktop size */
+@media screen
+and (min-width: 321px) {
+    .questions_container_row{
+        width:50%;
+        height: 100px;
+        background-color: #334257;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 20px;
+        padding: 10px;
+        margin-top: 30px;
+    }
+    .question{
+        width: 100%;
+        color: #EEEEEE;
+        font-weight: bolder;
+        font-size: 1.3vw;
+        cursor: pointer;
+    }
 .question:hover{
     width: 100%;
     height: 100px;
@@ -52,9 +38,6 @@
     align-items: center;
     box-shadow: 10px 20px 30px #548CA8;
 }
-
-/*crear sidebar para question_container*/
-
 .questions_container_sidebar{
     width:10%;
     height:500px;
@@ -67,3 +50,59 @@
     padding: 10px;
     margin-left: 20px;
 }
+}
+
+/* phone' size */
+@media screen
+and (max-width: 320px) {
+    .questions_container_row{
+        width:85%;
+        height: 100px;
+        background-color: #334257;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 20px;
+        padding: 10px;
+        margin-top: 30px;
+    }
+    .question{
+        width: 100%;
+        color: #EEEEEE;
+        font-weight: bolder;
+        font-size: 3vw;
+        cursor: pointer;
+    }
+    .questions_container_sidebar{
+        width:15%;
+        height:300px;
+        background-color: #334257;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 20px;
+        padding: 10px;
+        margin-left: 20px;
+    }
+
+}
+
+
+
+.question_clicked{
+    width: 100%;
+    height: 30%;
+    background-color: #7E3ABA;
+    color: #EEEEEE;
+    border-radius: 20px;
+    font-size: 1vw;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+
