new size changed

--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -73,6 +73,12 @@
         text-transform: uppercase;
         text-shadow: 1px 1px 2px black;
     }
+    .navBarIcon{
+        display: none;
+    }
+    .navBarIcon2{
+    display: none;
+    }
 
   }
 
@@ -122,5 +128,8 @@
         color: white;
         text-transform: uppercase;
         text-shadow: 1px 1px 2px black;
+    }
+    .skills_header_hidden{
+        display: none;
     }
   }
