--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -66,6 +66,7 @@ and (max-width: 420px) {
         border-radius: 20px;
         padding: 10px;
         margin-top: 30px;
+        display: none;
     }
     .question{
         width: 100%;
