--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -142,12 +142,15 @@
         margin-bottom: 5px;
     }
     .navBarIcon{
-        display: block;
         position: absolute;
-        top:220px;
+        top:210px;
         right:0px;
         width:100%;
-        height: 150px;
+        height: 170px;
         background-color: #334257;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
   }
