--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -117,17 +117,18 @@
         width: 100px;
         height: 100px;
         border-radius: 150px;
-        background-color: #334257;
-        /* background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%); */
+        /* background-color: #334257; */
+        background: -webkit-linear-gradient(180deg, #334257  10%, #476072 50%);
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
         color:white;
         font-weight: bolder;
-        font-size: 3vw;
+        font-size: 4.5vw;
         cursor: pointer;
         animation: skillsMobile 8s ease 2s infinite alternate backwards running;
+        margin-top:30px
     }
 
     @keyframes skillsMobile {
