--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -104,6 +104,10 @@
             left:0px;
         }
   }
+
+  .skills_button{
+      display: none;
+  }
 }
 
 
@@ -113,7 +117,7 @@
 @media screen 
   and (max-width: 420px) 
  {
-    .skills_header_button{
+    .skills_button{
         width: 100px;
         height: 100px;
         border-radius: 150px;
