--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -5,18 +5,43 @@
     justify-content: space-between;
     align-items: center;
 }
-.projectsPage_section{
-    width: 78%;
-    height: 700px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.eachProject_section{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-    justify-items: center;
-}
+
+
+@media screen
+    and (min-width: 420px){
+        .projectsPage_section{
+            width: 78%;
+            height: 700px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+        .eachProject_section{
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+            justify-items: center;
+        }
+    }
+
+@media screen
+    and (max-width: 420px){
+        .projectsPage_section{
+            width: 100%;
+            height: 350px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+        .eachProject_section{
+            width: 100%;
+            display: grid;
+            grid-template-columns:1fr 1fr;
+            gap: 15px;
+            justify-items: center;
+        }
+    }
