--- a/new-portfolio/src/pages/WhyPage.css
+++ b/new-portfolio/src/pages/WhyPage.css
@@ -13,3 +13,15 @@
     justify-content: center;
     align-items: center;
 }
+@media screen
+    and (max-width: 420px){
+        .whyPage_section{
+            width: 100%;
+            height: 400px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+    }
