--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -6,12 +6,33 @@
 and (min-width:421px){
 .form__container{
         width:100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        display: grid;
+        grid-template-areas: "head head head"
+                            "questions1 questions2 questions3"
+                            "textarea textarea textarea"
+                            "button button button";    
         border-radius: 20px;
+        justify-items: center;
+        align-items: center;
         background:  -webkit-linear-gradient(90deg, #334257 10%, #476072 70% );
+    }
+    #title{
+        grid-area: head;
+    }
+    #input1 {
+        grid-area: questions1;
+    }
+    #input2 {
+        grid-area: questions2;
+    }
+    #input3{
+        grid-area: questions3;
+    }
+    #input4{
+        grid-area: textarea;
+    }
+    #button{
+        grid-area: button;
     }
 
 .form_title{
@@ -19,7 +40,9 @@ and (min-width:421px){
     font-size: 2vw;
     font-weight: bold;
     font-family: 'Architects Daughter', cursive;
+
 }
+
 
 .form_input, .form_textarea{
     margin: 10px;
@@ -27,6 +50,8 @@ and (min-width:421px){
     width: 60%;
     border: 2px solid #e2e2e2;
     border-radius: 10px;
+    font-family: 'Architects Daughter', cursive;
+    /* font-size: 4vw; */
 }
 .form_input:focus{
     outline: none;
@@ -34,7 +59,7 @@ and (min-width:421px){
 }
 
 ::-webkit-input-placeholder{
-    text-align: center;
+    text-align: start;
     font-size: 1.2vw;
     font-style: oblique;
     color: #476072;
