project section modified

--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -37,6 +37,7 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
+            margin-top: 40px;
         }
         .eachProject_section{
             width: 100%;
