--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -44,7 +44,7 @@ and (min-width: 421px) {
     background-color: #334257;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border-radius: 20px;
     padding: 10px;
