--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -28,6 +28,8 @@ and (min-width:421px){
         font-size: 2vw;
         cursor: pointer;
         text-decoration: none;
+        animation: tracking-in-contract-bck 4s cubic-bezier(0.215, 0.610, 0.355, 1.000) both infinite;
+
     }
     .phone_text{
         text-decoration: none;
@@ -35,17 +37,35 @@ and (min-width:421px){
     }
     .email_contact_section:hover, .phone_contact_section:hover{
         background-color: #334257;
-        width: 100%;
-        height: 100px;
+        /* width: 100%;
+        height: 100px; */
         color: #EEEEEE;
         display: flex;
-        font-size: 2.5vw;
+        /* font-size: 2.5vw; */
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
         border-radius: 100px;
         box-shadow: 10px 20px 30px #548CA8;
     }
+    @keyframes tracking-in-contract-bck {
+        0% {
+          letter-spacing: 1em;
+          transform: translateZ(400px);
+          opacity: 0;
+        }
+        40% {
+          opacity: 0.6;
+        }
+        100% {
+          transform: translateZ(0);
+          opacity: 1;
+        }
+      }
+      
+      
+      
+
     
 }
 
