--- a/new-portfolio/src/pages/WhyPage.css
+++ b/new-portfolio/src/pages/WhyPage.css
@@ -9,7 +9,7 @@
     width: 78%;
     height: 700px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
