button whyPage section modified

--- a/new-portfolio/src/pages/WhyPage.css
+++ b/new-portfolio/src/pages/WhyPage.css
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: flex-end;
 }
-.button_WhyPage{
+.button_WhyPage_section{
     width: 20%;
     margin-left: 10px;
     background-color: #334257;
@@ -65,5 +65,15 @@
             justify-content: center;
             align-items: center;
             padding: 20px;
+        }
+
+
+
+        .button_WhyPage_section{
+            width:40%;
+            margin-left: 10px;
+            background-color: #334257;
+            border: none;
+            height: 40px;
         }
     }
